--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -87,9 +87,12 @@
     }
     
     &__button-box {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+        text-align: center;
+        margin-bottom: -12rem;
+        //display: flex;
+        //flex-direction: column;
+        //align-items: center;
+    
         
     }
     
